# ia_practicos

./: README.md
Practico0/: guia_de_instalacion.md  practico0.ipynb  python_syntax.ipynb
Practico1/: action_list_agent.py  input_agent.py  random_agent.py  river_crossing.ipynb  simple_reflex_agent.py
Practico2/: agent.py  aire_acondicionado.ipynb  constants.py
Practico3/: a_star_agent.py  frozen_lake.ipynb  search_agent.py  ucs_agent.py
Practico4/: a_star_agent.py  eight_puzzle.ipynb  eight_puzzle.py
Practico5/: volcano_crossing.ipynb
Practico6_IMPORTANTE/: cliff_walking.ipynb  pyproject.toml  q_learning_agent.py
Practico7_IMPORTANTE/: agent.py  expectimax_agent.py  main.ipynb  minimax_agent.py  pyproject.toml  random_agent.py  tic_tac_toe.py
